<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alpha_05_black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/blackText1"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:text="@string/login_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.ConstraintLayout
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_userInput"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/HintError"
            app:theme="@style/TextInputLayout_Demo01"
            app:counterOverflowTextAppearance="@style/HintError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- app:counterOverflowTextAppearance="@style/HintError" 提示样式-->
            <!-- app:theme="@style/TextInputLayout_Demo01" 自己定义的样式 -->

            <EditText
                android:hint="@string/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_passInput"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:theme="@style/TextInputLayout_Demo01"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/HintError"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/eye_color"
            app:layout_constraintTop_toBottomOf="@id/login_userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- app:passwordToggleEnabled="true" 开关图片-->
            <!-- app:passwordToggleDrawable="@drawable/eye03" 图片-->

            <EditText
                android:text="123456"
                android:inputType="textPassword"
                android:hint="@string/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_Btn"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn_bg"
            app:layout_constraintTop_toBottomOf="@id/login_passInput"
            android:text="@string/login_btnStr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/login_settingBtn"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_setting_bg"
            app:layout_constraintTop_toBottomOf="@id/login_Btn"
            android:text="@string/login_settingStr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="45dp" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/login_version"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="版本号：xxxx"
        style="@style/black_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>
